@@ -4,6 +4,7 @@ Change Log
 <next release> - <release date>
     + feature: support hostname, port, tds_version connect params without freetds.config
     - bug #46: better handling for byte strings that don't represent ascii data
+    - bug: custom param handling avoids bugs when '%' is used in the SQL (modulus operator)
 
 Tue Nov 02 09:33:00 2010 Damien Churchill <damoxc@gmail.com>
 	* _mssql.pyx:
